--- a/app/src/main/res/layout/tours_fragment.xml
+++ b/app/src/main/res/layout/tours_fragment.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
+        android:id="@+id/btnDetailTour"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="Tours"/>
 
 </LinearLayout>
